[package]
name = "the"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5" }
opencl3 = "0.9.5"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rodio = { version = "0.19.0", features = ["symphonia-all"] }
opencl3 = "0.9.5"
termion = "4.0.2"
image = "0.25.2"
opencv = "0.93.0"
crossbeam = "0.8.4"
